grammar/grammar.txt
DOM = DOM | ELEMENT | COMMENT
ELEMENT = OPEN_TAG (& INNER_TEXT & CLOSE_TAG)
COMMENT = IGNORE_TAG & INNER_TEXT & CLOSE_TAG
OPEN_TAG = OPEN_TAG_START & TAG_NAME (& ATTRIBUTE) & [TAG_FINISH | OPEN_TAG_CLOSE]
CLOSE_TAG = CLOSE_TAG_START & TAG_NAME & TAG_FINISH
ATTRIBUTE = ATT_KEY & EQUALS & ATT_VALUE
ATT_KEY = string
EQUALS = '='
ATT_VALUE = string
TAG_NAME = string
OPEN_TAG_START = '<'
TAG_FINISH = '>'
OPEN_TAG_CLOSE = '/>'
CLOSE_TAG_START = '</'
INNER_TEXT = string
SCRIPT_BLOCK = string FIXME: expand this to a ScriptExpression when the ScriptParser has been defined.
IGNORE_TAG = '<!'
